# python-project-52

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml  requirements.txt  setup.cfg
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
task_manager/: settings.py  urls.py  views.py
task_manager/label/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/label/fixtures/: users.json
task_manager/label/migrations/: 0001_initial.py
task_manager/status/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/status/migrations/: 0001_initial.py  0002_initial.py  0003_alter_status_name.py  0004_remove_status_creator.py
task_manager/task/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/task/fixtures/: users.json
task_manager/task/migrations/: 0001_initial.py  0002_initial.py  0003_alter_task_description_alter_task_status.py
task_manager/templates/: auth_navbar.html  base.html  footer.html  index.html  navbar.html  unauth_navbar.html
task_manager/templates/label/: create.html  delete.html  labels.html  update.html
task_manager/templates/status/: create.html  delete.html  statuses.html  update.html
task_manager/templates/task/: create.html  delete.html  tasks.html  update.html
task_manager/templates/user/: create.html  delete.html  login.html  update.html  users.html
task_manager/user/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/user/fixtures/: registration_data.json  users.json
task_manager/user/migrations/: 0001_initial.py
