[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.1.4",
    "django-bootstrap5>=24.3",
    "django-filter>=24.3",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pytest-django>=4.9.0",
    "python-dotenv>=1.0.1",
    "rollbar>=1.1.1",
    "setuptools>=75.8.0",
    "uvicorn>=0.34.0",
    "whitenoise[brotli]>=6.8.2",
]


[tool.setuptools]
packages = ["task_manager"]